--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Archivo CSS propio -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./forntend/css/style.css">
   <!-- Font Awesome (para íconos) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -44,7 +44,7 @@
   <!-- Sobre mí -->
   <section id="about" class="py-5">
     <div class="container text-center">
-      <img src="./img/IMG_4154 2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll" style="width: 150px; height: 150px;">
+      <img src="./forntend/img/IMG_4154 2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll" style="width: 150px; height: 150px;">
       <div class="text-container mx-auto" style="max-width: 600px; text-align: justify;">
         <p>Soy Damián H. Medina, abogado senior con 15 años de experiencia en litigación, reconocido por mi capacidad para gestionar situaciones altamente complejas y multidisciplinarias. Comencé mi carrera en el Poder Judicial de Córdoba y, a lo largo de mi trayectoria, he cofundado tres estudios jurídicos, asesorando a clientes a nivel provincial y nacional.</p>
         <p>Desde 2018, me desempeño como Jefe de Legales en LiderOil Argentina, liderando equipos en negociaciones y litigios internacionales. He participado en numerosos casos complejos relacionados con daños y, en particular, siniestros viales con fatalidades; así como en Defensas Penales en una amplia gama de situaciones. Mi enfoque siempre ha sido estratégico, con el objetivo de resolver conflictos de manera efectiva y eficiente, priorizando los mejores intereses de mis clientes.</p>
@@ -58,15 +58,15 @@
       <h1 class="text-center mb-4">Servicios:</h1>
       <div class="row">
         <div class="col-md-4 text-center">
-          <img src="./img/Diseño sin título (2).svg" alt="Defensa Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./forntend/img/Diseño sin título (2).svg" alt="Defensa Penal" class="img-fluid mb-3" style="width: 80px;">
           <h4>Defensas Penales</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./img/Diseño sin título (3).svg" alt="Juicios Penales" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./forntend/img/Diseño sin título (3).svg" alt="Juicios Penales" class="img-fluid mb-3" style="width: 80px;">
           <h4>Querellas Particulares</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./img/Diseño sin título (1).svg" alt="Consultoría Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./forntend/img/Diseño sin título (1).svg" alt="Consultoría Penal" class="img-fluid mb-3" style="width: 80px;">
           <h4>Consultoría</h4>
         </div>
       </div>
@@ -104,13 +104,13 @@
     </div>
 
     <div class="image-container">
-      <img src="./img/Diseño sin título (6).png" alt="Martillo de Justicia" class="martillo-img">
+      <img src="./forntend/img/Diseño sin título (6).png" alt="Martillo de Justicia" class="martillo-img">
     </div>
   </section>
       
   <!-- Mapa -->
   <div class="map-container mb-5 mt-5">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13619.506749380957!2d-64.19481578280308!3d-31.4175233898903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2835eeee3b3%3A0xdd68677effa20028!2sIndependencia%20129%2C%20X5000IUC%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1728913194029!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13619.506749380957!2d-64.19481578280308!3d-31.4175233898903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2835eeee3b3%3A0xdd68677effa20028!2sIndependencia%20129%2C%20X5000IUC%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1728913194029!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 
   <!-- Footer -->
@@ -127,6 +127,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   
   <!-- Archivo JavaScript propio -->
-  <script src="./js/main.js"></script>
+  <script src="./forntend/js/main.js"></script>
 </body>
 </html>
