finalizando el front

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,33 +8,40 @@
   <meta name="keywords" content="abogado penalista, Córdoba, derecho penal, defensa criminal">
   <meta name="author" content="Abogado Penalista Córdoba">
   <title>Dr. Damián H. Medina</title>
+
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="./forntend/img/favicon/favicon-48x48.png" sizes="48x48" />
+  <link rel="icon" type="image/svg+xml" href="./forntend/img/favicon/favicon.svg" />
+  <link rel="shortcut icon" href="./forntend/img/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="./forntend/img/favicon/apple-touch-icon.png" />
+  <link rel="manifest" href="./forntend/img/favicon/site.webmanifest" />
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Archivo CSS propio -->
   <link rel="stylesheet" href="./forntend/css/style.css">
-  <!-- Font Awesome (para íconos) -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  
 </head>
-<body>
 
+<body>
   <!-- Header -->
   <header class="bg-dark text-light d-flex align-items-center position-relative">
-    <!-- Iconos de redes sociales dentro del header -->
-    <div class="social-icons position-absolute top-0 start-0 p-3" id="social-links">
+    <!-- Iconos de redes sociales -->
+    <div class="social-icons">
       <a href="https://www.linkedin.com/in/dhmedina" target="_blank" class="me-3">
-        <i class="fab fa-linkedin fa-2x text-light"></i>
+        <img src="./forntend/img/icons/linkedin.svg" alt="LinkedIn Icon" class="social-icon">
       </a>
-      <a href="https://www.instagram.com/dr.dhmedina?igsh=c3NjcWJmMmwxcGQ2&utm_source=qr" target="_blank">
-        <i class="fab fa-instagram fa-2x text-light"></i>
+      <a href="https://www.instagram.com/dr.dhmedina?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
+        <img src="./forntend/img/icons/instagram.svg" alt="Instagram Icon" class="social-icon">
       </a>
       <a href="https://www.facebook.com/dr.dhmedina" target="_blank">
-        <i class="fab fa-facebook fa-2x text-light"></i>
+        <img src="./forntend/img/icons/facebook.svg" alt="Facebook Icon" class="social-icon">
       </a>
       <a href="https://wa.me/5493517564975" target="_blank">
-        <i class="fab fa-whatsapp fa-2x text-light"></i>
+        <img src="./forntend/img/icons/whatsapp.svg" alt="WhatsApp Icon" class="social-icon">
       </a>
     </div>
-    
+
     <!-- Contenido del header -->
     <div class="container header-content">
       <h1 class="display-4">Dr. Damián H. Medina</h1>
@@ -44,10 +52,12 @@
   <!-- Sobre mí -->
   <section id="about" class="py-5">
     <div class="container text-center">
-      <img src="./forntend/img/IMG_4154 2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll" style="width: 150px; height: 150px;">
+      <img src="./forntend/img/IMG_4154 2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll"
+        style="width: 150px; height: 150px;">
       <div class="text-container mx-auto" style="max-width: 600px; text-align: justify;">
         <p>Soy Damián H. Medina, abogado senior con 15 años de experiencia en litigación, reconocido por mi capacidad para gestionar situaciones altamente complejas y multidisciplinarias. Comencé mi carrera en el Poder Judicial de Córdoba y, a lo largo de mi trayectoria, he cofundado tres estudios jurídicos, asesorando a clientes a nivel provincial y nacional.</p>
-        <p>Desde 2018, me desempeño como Jefe de Legales en LiderOil Argentina, liderando equipos en negociaciones y litigios internacionales. He participado en numerosos casos complejos relacionados con daños y, en particular, siniestros viales con fatalidades; así como en Defensas Penales en una amplia gama de situaciones. Mi enfoque siempre ha sido estratégico, con el objetivo de resolver conflictos de manera efectiva y eficiente, priorizando los mejores intereses de mis clientes.</p>
+
+        <p>Desde 2018, me desempeño como Jefe de Legales en LiderOil Argentina, liderando equipos en negociaciones y litigios internacionales. He participado en numerosos casos complejos relacionados con daños y en particular siniestros viales con fatalidades; así como en Defensas Penales en una amplia gama de situaciones. Mi enfoque siempre ha sido estratégico, con el objetivo de resolver conflictos de manera efectiva y eficiente, priorizando los mejores intereses de mis clientes.</p>
       </div>
     </div>
   </section>
@@ -76,57 +86,63 @@
   <!-- Botón para Contacto -->
   <section id="contact" class="py-5">
     <div class="container">
-      <!-- Botón con H2 que lleva al formulario -->
       <h2 class="contact-btn text-center mb-4" id="scroll-to-form" style="cursor: pointer;">
         Contáctame <i class="fas fa-arrow-down"></i>
       </h2>
     </div>
-  </section>  
+  </section>
 
-  <!-- Formulario de Contacto con Imagen Jurídica -->
+  <!-- Formulario de Contacto -->
   <section id="contact-section" class="d-flex align-items-center">
     <div class="form-container">
       <form id="contact-form">
         <div class="mb-3">
           <label for="name" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="name" required>
+          <input type="text" class="form-control" id="name" name="name" autocomplete="name" required>
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Correo Electrónico</label>
-          <input type="email" class="form-control" id="email" required>
+          <input type="email" class="form-control" id="email" name="email" autocomplete="email" required>
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" rows="5" required></textarea>
+          <textarea class="form-control" id="message" name="message" rows="5" autocomplete="off" required></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
 
     <div class="image-container">
-      <img src="./forntend/img/Diseño sin título (6).png" alt="Martillo de Justicia" class="martillo-img">
+      <img src="./forntend/img/Diseño sin título (1).jpg" alt="diosa de la justicia" class="martillo-img">
+    </div>
+</section>
+
+  <!-- Mapa -->
+  <section id="map-section" class="py-5">
+    <div class="map-container mb-5 mt-5 text-center">
+      <a href="https://maps.app.goo.gl/tSbF3JgTjazDReKE9" target="_blank">
+        <img src="./forntend/img/mapa.png" alt="Ubicación del estudio jurídico" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);">
+      </a>
+      <p class="mt-3">Haz clic en la imagen para ver la ubicación en Google Maps</p>
     </div>
   </section>
-      
-  <!-- Mapa -->
-  <div class="map-container mb-5 mt-5">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13619.506749380957!2d-64.19481578280308!3d-31.4175233898903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9432a2835eeee3b3%3A0xdd68677effa20028!2sIndependencia%20129%2C%20X5000IUC%20C%C3%B3rdoba!5e0!3m2!1ses!2sar!4v1728913194029!5m2!1ses!2sar" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
 
   <!-- Footer -->
-  <footer class="text-center bg-dark text-light py-3">
+  <footer class="text-center">
     <p>© 2024 Dr. Damián H. Medina | Todos los derechos reservados</p>
   </footer>
 
-  <!-- Botón "Ir arriba" -->
+  <!-- Botón "Ir arriba" con icono propio -->
   <a id="back-to-top" class="btn btn-primary" style="display:none; position:fixed; bottom:20px; right:20px; z-index:1000;">
-    <i class="fas fa-arrow-up"></i> Arriba
+    <img src="./forntend/img/icons/arrow-small-up.svg" alt="Icono de ir arriba" style="width: 20px; height: 20px;">
+    Arriba
   </a>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-  
+
   <!-- Archivo JavaScript propio -->
   <script src="./forntend/js/main.js"></script>
 </body>
+
 </html>
