--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
   <title>Dr. Damián H. Medina</title>
 
   <!-- favicon -->
-  <link rel="icon" type="image/png" href="./forntend/img/favicon/favicon-48x48.png" sizes="48x48" />
-  <link rel="icon" type="image/svg+xml" href="./forntend/img/favicon/favicon.svg" />
-  <link rel="shortcut icon" href="./forntend/img/favicon/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="./forntend/img/favicon/apple-touch-icon.png" />
-  <link rel="manifest" href="./forntend/img/favicon/site.webmanifest" />
+  <link rel="icon" type="image/png" href="./frontend/img/favicon/favicon-48x48.png">
+  <link rel="icon" type="image/svg+xml" href="./frontend/img/favicon/favicon.svg">
+  <link rel="shortcut icon" href="./frontend/img/favicon/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="./frontend/img/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="./frontend/img/favicon/site.webmanifest">
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Archivo CSS propio -->
-  <link rel="stylesheet" href="./forntend/css/style.css">
+  <link rel="stylesheet" href="./frontend/css/style.css">
   
 </head>
 
@@ -29,16 +29,16 @@
     <!-- Iconos de redes sociales -->
     <div class="social-icons">
       <a href="https://www.linkedin.com/in/dhmedina" target="_blank" class="me-3">
-        <img src="./forntend/img/icons/linkedin.svg" alt="LinkedIn Icon" class="social-icon">
+        <img src="./frontend/img/icons/linkedin.svg" alt="LinkedIn Icon" class="social-icon">
       </a>
       <a href="https://www.instagram.com/dr.dhmedina?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-        <img src="./forntend/img/icons/instagram.svg" alt="Instagram Icon" class="social-icon">
+        <img src="./frontend/img/icons/instagram.svg" alt="Instagram Icon" class="social-icon">
       </a>
       <a href="https://www.facebook.com/dr.dhmedina" target="_blank">
-        <img src="./forntend/img/icons/facebook.svg" alt="Facebook Icon" class="social-icon">
+        <img src="./frontend/img/icons/facebook.svg" alt="Facebook Icon" class="social-icon">
       </a>
       <a href="https://wa.me/5493517564975" target="_blank">
-        <img src="./forntend/img/icons/whatsapp.svg" alt="WhatsApp Icon" class="social-icon">
+        <img src="./frontend/img/icons/whatsapp.svg" alt="WhatsApp Icon" class="social-icon">
       </a>
     </div>
 
@@ -52,7 +52,7 @@
   <!-- Sobre mí -->
   <section id="about" class="py-5">
     <div class="container text-center">
-      <img src="./forntend/img/IMG_4154 2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll"
+      <img src="./frontend/img/IMG_4154-2-1.jpg" alt="Abogado Penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll"
         style="width: 150px; height: 150px;">
       <div class="text-container mx-auto" style="max-width: 600px; text-align: justify;">
         <p>Soy Damián H. Medina, abogado senior con 15 años de experiencia en litigación, reconocido por mi capacidad para gestionar situaciones altamente complejas y multidisciplinarias. Comencé mi carrera en el Poder Judicial de Córdoba y, a lo largo de mi trayectoria, he cofundado tres estudios jurídicos, asesorando a clientes a nivel provincial y nacional.</p>
@@ -64,19 +64,19 @@
 
   <!-- Áreas de Práctica -->
   <section id="services" class="bg-light py-5">
+    <h2 class="text-center mb-4">Servicios:</h2>
     <div class="container">
-      <h1 class="text-center mb-4">Servicios:</h1>
       <div class="row">
         <div class="col-md-4 text-center">
-          <img src="./forntend/img/Diseño sin título (2).svg" alt="Defensa Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseño-sin-título-2.svg" alt="Defensa Penal" class="img-fluid mb-3" style="width: 80px;">
           <h4>Defensas Penales</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./forntend/img/Diseño sin título (3).svg" alt="Juicios Penales" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseño-sin-título-3.svg" alt="Juicios Penales" class="img-fluid mb-3" style="width: 80px;">
           <h4>Querellas Particulares</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./forntend/img/Diseño sin título (1).svg" alt="Consultoría Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseño-sin-título-1.svg" alt="Consultoría Penal" class="img-fluid mb-3" style="width: 80px;">
           <h4>Consultoría</h4>
         </div>
       </div>
@@ -113,15 +113,19 @@
     </div>
 
     <div class="image-container">
-      <img src="./forntend/img/Diseño sin título (1).jpg" alt="diosa de la justicia" class="martillo-img">
+      <img src="./frontend/img/Diseño-sin-título-1.jpg" alt="diosa de la justicia" class="martillo-img">
     </div>
 </section>
 
   <!-- Mapa -->
   <section id="map-section" class="py-5">
+    <h2 class="h2-map">
+      <img src="./frontend/img/icons/icon8.png" alt="Icono de Ubicación" style="width: 24px; height: 24px; margin-right: 10px; filter: brightness(0) invert(1);">
+      Ubicación
+    </h2>
     <div class="map-container mb-5 mt-5 text-center">
       <a href="https://maps.app.goo.gl/tSbF3JgTjazDReKE9" target="_blank">
-        <img src="./forntend/img/mapa.png" alt="Ubicación del estudio jurídico" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);">
+        <img src="./frontend/img/mapa.png" alt="Ubicación del estudio jurídico" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);">
       </a>
       <p class="mt-3">Haz clic en la imagen para ver la ubicación en Google Maps</p>
     </div>
@@ -134,7 +138,7 @@
 
   <!-- Botón "Ir arriba" con icono propio -->
   <a id="back-to-top" class="btn btn-primary" style="display:none; position:fixed; bottom:20px; right:20px; z-index:1000;">
-    <img src="./forntend/img/icons/arrow-small-up.svg" alt="Icono de ir arriba" style="width: 20px; height: 20px;">
+    <img src="./frontend/img/icons/arrow-small-up.svg" alt="Icono de ir arriba" style="width: 20px; height: 20px;">
     Arriba
   </a>
 
@@ -142,7 +146,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- Archivo JavaScript propio -->
-  <script src="./forntend/js/main.js"></script>
+  <script src="./frontend/js/main.js"></script>
 </body>
 
 </html>
