--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
   <header class="bg-dark text-light d-flex align-items-center position-relative">
     <!-- Iconos de redes sociales -->
     <div class="social-icons">
-      <a href="https://www.linkedin.com/in/dhmedina" target="_blank" class="me-3">
-        <img src="./frontend/img/icons/linkedin.svg" alt="Enlace a LinkedIn de Dr. Damián H. Medina" class="social-icon">
+      <a href="https://www.linkedin.com/in/dhmedina" target="_blank" class="me-3" aria-label="LinkedIn de Dr. Damián H. Medina">
+        <img src="./frontend/img/icons/linkedin.svg" alt="Ícono de LinkedIn" class="social-icon">
       </a>
-      <a href="https://www.instagram.com/dr.dhmedina?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
-        <img src="./frontend/img/icons/instagram.svg" alt="Enlace a Instagram de Dr. Damián H. Medina" class="social-icon">
+      <a href="https://www.instagram.com/dr.dhmedina?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" aria-label="Instagram de Dr. Damián H. Medina">
+        <img src="./frontend/img/icons/instagram.svg" alt="Ícono de Instagram" class="social-icon">
       </a>
-      <a href="https://www.facebook.com/dr.dhmedina" target="_blank">
-        <img src="./frontend/img/icons/facebook.svg" alt="Enlace a Facebook de Dr. Damián H. Medina" class="social-icon">
+      <a href="https://www.facebook.com/dr.dhmedina" target="_blank" aria-label="Facebook de Dr. Damián H. Medina">
+        <img src="./frontend/img/icons/facebook.svg" alt="Ícono de Facebook" class="social-icon">
       </a>
-      <a href="https://wa.me/5493517564975" target="_blank">
-        <img src="./frontend/img/icons/whatsapp.svg" alt="Enlace a WhatsApp de Dr. Damián H. Medina" class="social-icon">
+      <a href="https://wa.me/5493517564975" target="_blank" aria-label="WhatsApp de Dr. Damián H. Medina">
+        <img src="./frontend/img/icons/whatsapp.svg" alt="Ícono de WhatsApp" class="social-icon">
       </a>
     </div>
 
@@ -52,8 +52,7 @@
   <!-- Sobre mí -->
   <section id="about" class="py-5">
     <div class="container text-center">
-      <img src="./frontend/img/IMG_4154-2-1.jpg" alt="Retrato de Dr. Damián H. Medina, abogado penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll"
-      style="width: 150px; height: 150px;">
+      <img src="./frontend/img/IMG_4154-2-1.webp" alt="Retrato de Dr. Damián H. Medina, abogado penalista" class="img-fluid rounded-circle mb-4 animate-on-scroll" loading="lazy" style="width: 150px; height: 150px;">
       <h2 class="text-center mb-4">Sobre mí:</h2>
       <div class="text-container mx-auto" style="max-width: 600px; text-align: justify;">
         <p>Soy Damián H. Medina, abogado senior con 15 años de experiencia en litigación, reconocido por mi capacidad para gestionar situaciones altamente complejas y multidisciplinarias. Comencé mi carrera en el Poder Judicial de Córdoba y, a lo largo de mi trayectoria, he cofundado tres estudios jurídicos, asesorando a clientes a nivel provincial y nacional.</p>
@@ -69,15 +68,15 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 text-center">
-          <img src="./frontend/img/Diseno-sin-titulo-2.svg" alt="Ícono de Defensa Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseno-sin-titulo-2.svg" alt="Ícono de Defensa Penal" class="img-fluid mb-3" style="width: 80px;" loading="lazy">
           <h4>Defensas Penales</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./frontend/img/Diseno-sin-titulo-3.svg" alt="Ícono de Juicios Penales" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseno-sin-titulo-3.svg" alt="Ícono de Juicios Penales" class="img-fluid mb-3" style="width: 80px;" loading="lazy">
           <h4>Querellas Particulares</h4>
         </div>
         <div class="col-md-4 text-center">
-          <img src="./frontend/img/Diseno-sin-titulo-1.svg" alt="Ícono de Consultoría Penal" class="img-fluid mb-3" style="width: 80px;">
+          <img src="./frontend/img/Diseno-sin-titulo-1.svg" alt="Ícono de Consultoría Penal" class="img-fluid mb-3" style="width: 80px;" loading="lazy">
           <h4>Consultoría</h4>
         </div>
       </div>
@@ -108,19 +107,19 @@
     </div>
 
     <div class="image-container">
-      <img src="./frontend/img/Diseno-sin-titulo-1.jpg" alt="Imagen simbólica de la diosa de la justicia" class="martillo-img">
+      <img src="./frontend/img/Diseno-sin-titulo-1.webp" alt="Imagen simbólica de la diosa de la justicia" class="martillo-img" loading="lazy">
     </div>
 </section>
 
   <!-- Mapa -->
   <section id="map-section" class="py-5">
     <h2 class="h2-map">
-      <img src="./frontend/img/icons/icon8.png" alt="Icono de Ubicación" style="width: 24px; height: 24px; margin-right: 10px; filter: brightness(0) invert(1);">
+      <img src="./frontend/img/icons/icon8.webp" alt="Ícono de ubicación" style="width: 24px; height: 24px; margin-right: 10px; filter: brightness(0) invert(1);" loading="lazy">
       Ubicación
     </h2>
     <div class="map-container mb-5 mt-5 text-center">
       <a href="https://maps.app.goo.gl/tSbF3JgTjazDReKE9" target="_blank">
-        <img src="./frontend/img/mapa.png" alt="Ubicación del estudio jurídico del Dr. Damián H. Medina en Google Maps" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);">
+        <img src="./frontend/img/mapa.webp" alt="Ubicación del estudio jurídico del Dr. Damián H. Medina en Google Maps" style="max-width: 100%; height: auto; border-radius: 10px; box-shadow: 0 8px 35px rgba(0, 0, 0, 0.2);" loading="lazy">
       </a>
       <p class="mt-3">Haz clic en la imagen para ver la ubicación en Google Maps</p>
     </div>
@@ -133,7 +132,7 @@
 
   <!-- Botón "Ir arriba" con icono propio -->
   <a id="back-to-top" class="btn btn-primary" style="display:none; position:fixed; bottom:20px; right:20px; z-index:1000;">
-    <img src="./frontend/img/icons/arrow-small-up.svg" alt="" style="width: 20px; height: 20px;">
+    <img src="./frontend/img/icons/arrow-small-up.svg" alt="Botón para volver arriba" style="width: 20px; height: 20px;">
     Arriba
   </a>
 
