mejorar la integración del backend con el formulario de contacto, corrigiendo la ruta  y mejorando el manejo de CORS

--- a/index.html
+++ b/index.html
@@ -92,24 +92,24 @@
       <form id="contact-form">
         <div class="mb-3">
           <label for="name" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="name" name="from_name" autocomplete="name" required>
+          <input type="text" class="form-control" id="name" name="from_name" autocomplete="name" required aria-label="Nombre">
         </div>
         <div class="mb-3">
           <label for="email" class="form-label">Correo Electrónico</label>
-          <input type="email" class="form-control" id="email" name="from_email" autocomplete="email" required>
+          <input type="email" class="form-control" id="email" name="from_email" autocomplete="email" required aria-label="Correo Electrónico">
         </div>
         <div class="mb-3">
           <label for="message" class="form-label">Mensaje</label>
-          <textarea class="form-control" id="message" name="message" rows="5" autocomplete="off" required></textarea>
+          <textarea class="form-control" id="message" name="message" rows="5" autocomplete="off" required aria-label="Mensaje"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
-
+  
     <div class="image-container">
       <img src="./frontend/img/Diseno-sin-titulo-1.webp" alt="Imagen simbólica de la diosa de la justicia" class="martillo-img" loading="lazy">
     </div>
-</section>
+  </section>
 
   <!-- Mapa -->
   <section id="map-section" class="py-5">
